<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MemeActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.MemeActivity">

        <ImageView
            android:id="@+id/memeImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="16:9"
            android:src="#cccccc"/>

        <Button
            android:id="@+id/uploadImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_image"
            app:layout_constraintEnd_toEndOf="@id/memeImage"
            app:layout_constraintStart_toStartOf="@id/memeImage"
            app:layout_constraintTop_toTopOf="@id/memeImage"
            app:layout_constraintBottom_toBottomOf="@id/memeImage"/>

        <LinearLayout
            android:id="@+id/editContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/memeImage">
            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/top_text"/>

            <co.ivanebernal.memegenerator.ui.TextPropertiesView
                android:id="@+id/topTextProperties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/memeImage"/>

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/bottom_text"/>

            <co.ivanebernal.memegenerator.ui.TextPropertiesView
                android:id="@+id/bottomTextProperties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/topTextProperties"/>

            <Button
                android:id="@+id/saveMemeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_image"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"/>

            <Button
                android:id="@+id/changeImageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_image"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="24dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>