<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/memeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/text"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/textSizeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textColorContainer"
        app:layout_constraintStart_toStartOf="@id/memeText"
        app:layout_constraintTop_toBottomOf="@id/memeText">

        <TextView
            android:id="@+id/textSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_size" />

        <EditText
            android:id="@+id/textSizeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:inputType="number"
            android:ems="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textColorContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/textSizeContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textSizeContainer"
        app:layout_constraintTop_toTopOf="@id/textSizeContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_color" />

        <androidx.cardview.widget.CardView
            android:id="@+id/textColorSample"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="12dp"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="12dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>